# Mind-Incarnation

./: .gitignore  .mi-project  AGENTS.md  LICENSE  Makefile  README.md  README.zh-CN.md  pyproject.toml
docs/: cli.md  cli.zh-CN.md  internals.md  mi-thought-db.md  mi-v1-spec.md
mi/: cli.py  cli_dispatch.py  cli_parser.py  codex_runner.py  config.py  evidence.py  gc.py  global_ledger.py  hands_cli.py  hosts.py  injection.py  inspect.py  llm.py  memory.py  memory_facade.py  memory_ingest.py  memory_render.py  memory_service.py  memory_snapshot.py  memory_text.py  memory_types.py  mind_anthropic.py  mind_errors.py  mind_openai_compat.py  mindspec.py  mindspec_runtime.py  operational_defaults.py  paths.py  pins.py  preferences.py  prompts.py  provider_factory.py  redact.py  risk.py  runner.py  schema_validate.py  storage.py  thought_context.py  thoughtdb.py  transcript.py  (+4 more)
references/: doc-map.md
scripts/: doccheck.py
tests/: test_ask_user_flow_helpers.py  test_ask_user_wiring_helpers.py  test_auto_answer_flow_helpers.py  test_auto_answer_wiring_helpers.py  test_autopilot_windowing.py  test_batch_context_build_helpers.py  test_batch_phase_helpers.py  test_check_plan_flow_helpers.py  test_check_plan_wiring_helpers.py  test_checkpoint_mining_helpers.py  test_checkpoint_pipeline_helpers.py  test_claim_mining_flow_helpers.py  test_cli_breaking_surface.py  test_cli_project_root.py  test_cli_project_token_shorthand.py  test_cli_run_task_parsing.py  test_codex_runner_args.py  test_config_and_schema.py  test_decide_actions_helpers.py  test_decide_next_wiring_helpers.py  (+83 more)
(+244 files in other folders)
